feat(upload): API spec and implementation to update/replace waypoints
